err_current.txt
   Compiling kinetix-kicomp v0.0.7 (D:\Progetti\Nevhar\Kinetix\crates\kicomp)
   Compiling kinetix-kivm v0.0.7 (D:\Progetti\Nevhar\Kinetix\crates\kivm)
   Compiling kinetix-cli v0.0.7 (D:\Progetti\Nevhar\Kinetix\crates\cli)
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 8.13s
     Running `target\debug\kivm.exe compile -i tests\test_errors.kix`

tests\test_errors.kix:
error: Undeclared variable: 'val'
  --> tests\test_errors.kix:26
   |
26 |     Some(val) => println(val)
   |          ^^^
  1 error(s) in Symbol Resolution

error[E0000]: aborting due to previous error(s)
  Kinetix v0.0.7 (Dev)
  For more information, open an issue: https://github.com/MisterY3515/Kinetix/issues

error: process didn't exit successfully: `target\debug\kivm.exe compile -i tests\test_errors.kix` (exit code: 1)
